examples/test/testpolicy18942.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18942
  namespace: namespace383
spec:
  podSelector:
    matchLabels:
      key11: value24
      key47: value18
      key30: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value45
          key31: value30
      podSelector:
        matchLabels:
          key10: value28
          key20: value29
